# summarizer

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  report.md
.github/workflows/: ci.yml
summarizer/: logger.py  open_api_call.py  openai_api_call.py  summary_parameters.py  text_splitter.py
summarizer/summarizers/: chunk_summarizer.py  text_summarizer.py
tests/: test_ci.py  test_e2e.py  test_logger.py  test_open_api_call.py  test_openai_api_call.py  test_summary_parameters.py  test_text_splitter.py
tests/data/: fantasy_story.md
tests/summarizers/: test_chunk_summarizer.py  test_text_summarizer.py
