[project]
name = "summarizer"
version = "0.1.0"
description = "Tool for summarizing text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-text-splitters>=0.3.7",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.1",
    "streamlit>=1.43.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
